/user/{sid}/ban and .../unban endpoints
Allows adding bans, ban timeouts, and unbanning at both the room and
server level.
