# sogs/routes/users.py
@@ -12,6 +12,64 @@ from flask import abort, jsonify, g, Blueprint, request
 users = Blueprint('users', __name__)
 
 
+def extract_rooms_or_global(req, admin=True):
+    """
+    Extracts the rooms / global parameters from the request body checking them for validity and
+    expanding them as appropriate.
+
+    Throws a flask abort on failure, returns (rooms, global) which will be either ([list of Rooms],
+    None) for a room operation or (None, True) for a global operation.
+
+    admin specifies whether we require admin permission (if True) or just moderator permission,
+    either in all rooms specified, or globally.  (Similarly it affects what `rooms=['*']` expands
+    to).
+    """
+
+    room_tokens, global_ = req.get('rooms'), req.get('global', False)
+
+    if room_tokens and not isinstance(room_tokens, list):
+        app.logger.warning("Invalid request: rooms must be a list")
+        abort(http.BAD_REQUEST)
+
+    if room_tokens and global_:
+        app.logger.warning("Invalid moderator request: cannot specify both 'rooms' and 'global'")
+        abort(http.BAD_REQUEST)
+
+    if not room_tokens and not global_:
+        app.logger.warning("Invalid moderator request: neither 'rooms' nor 'global' specified")
+        abort(http.BAD_REQUEST)
+
+    if room_tokens:
+        if len(room_tokens) > 1 and '*' in room_tokens:
+            app.logger.warning("Invalid moderator request: room '*' must be the only rooms value")
+            abort(http.BAD_REQUEST)
+
+        if room_tokens == ['*']:
+            room_tokens = None
+
+        try:
+            rooms = mroom.get_rooms_with_permission(
+                g.user, tokens=room_tokens, moderator=True, admin=admin
+            )
+        except Exception as e:
+            # This is almost certainly a bad room token passed in:
+            app.logger.warning(f"Cannot get rooms for adding a moderator: {e}")
+            abort(http.NOT_FOUND)
+
+        if room_tokens:
+            if len(rooms) != len(room_tokens):
+                abort(http.FORBIDDEN)
+        elif not rooms:
+            abort(http.FORBIDDEN)
+
+        return (rooms, None)
+
+    if not g.user.global_moderator or (admin and not g.user.global_admin):
+        abort(http.FORBIDDEN)
+
+    return (None, True)
+
+
 @users.post("/user/<SessionID:sid>/moderator")
 @auth.user_required
 def set_mod(sid):
@@ -19,11 +77,8 @@ def set_mod(sid):
     user = User(session_id=sid)
 
     req = request.json
-    room_tokens, global_mod = req.get('rooms'), req.get('global', False)
 
-    if room_tokens and not isinstance(room_tokens, list):
-        app.logger.warning("Invalid request: room_tokens must be a list")
-        abort(http.BAD_REQUEST)
+    rooms, global_mod = extract_rooms_or_global(req)
 
     mod, admin, visible = (
         None if arg is None else bool(arg)
@@ -51,39 +106,11 @@ def set_mod(sid):
     # (False, True) -- removes admin, adds mod
     # (False, None) -- removes admin
 
-    with db.transaction():
-        if room_tokens:
-            if visible is None:
-                visible = True
+    if rooms:
+        if visible is None:
+            visible = True
 
-            if global_mod:
-                app.logger.warning(
-                    "Invalid moderator request: cannot specify both 'rooms' and 'global'"
-                )
-                abort(http.BAD_REQUEST)
-
-            if len(room_tokens) > 1 and '*' in room_tokens:
-                app.logger.warning(
-                    "Invalid moderator request: room '*' must be the only rooms value"
-                )
-                abort(http.BAD_REQUEST)
-
-            if room_tokens == ['*']:
-                room_tokens = None
-
-            try:
-                rooms = mroom.get_rooms_with_permission(g.user, tokens=room_tokens, admin=True)
-            except Exception as e:
-                # This is almost certainly a bad room token passed in:
-                app.logger.warning(f"Cannot get rooms for adding a moderator: {e}")
-                abort(http.BAD_REQUEST)
-
-            if room_tokens is not None:
-                if len(rooms) != len(room_tokens):
-                    abort(http.FORBIDDEN)
-            elif not rooms:
-                abort(http.FORBIDDEN)
-
+        with db.transaction():
             for room in rooms:
                 if (admin, mod) in ((True, None), (None, True)):
                     room.set_moderator(user, added_by=g.user, admin=admin, visible=visible)
@@ -98,18 +125,63 @@ def set_mod(sid):
                     app.logger.error("Internal error: unhandled mod/admin room case")
                     raise RuntimeError("Internal error: unhandled mod/admin room case")
 
-        else:  # global mod
-            if visible is None:
-                visible = False
+    else:  # global mod
+        if visible is None:
+            visible = False
 
-            if (admin, mod) in ((True, None), (None, True)):
-                user.set_moderator(added_by=g.user, admin=admin, visible=visible)
-            elif (admin, mod) == (None, False):
-                user.remove_moderator(removed_by=g.user)
-            elif (admin, mod) == (False, None):
-                user.remove_moderator(removed_by=g.user, remove_admin_only=True)
-            elif (admin, mod) == (False, True):
+        if (admin, mod) in ((True, None), (None, True)):
+            user.set_moderator(added_by=g.user, admin=admin, visible=visible)
+        elif (admin, mod) == (None, False):
+            user.remove_moderator(removed_by=g.user)
+        elif (admin, mod) == (False, None):
+            user.remove_moderator(removed_by=g.user, remove_admin_only=True)
+        elif (admin, mod) == (False, True):
+            with db.transaction():
                 user.remove_moderator(removed_by=g.user, remove_admin_only=True)
                 user.set_moderator(added_by=g.user, admin=bool(admin), visible=visible)
 
     return jsonify({})
+
+
+@users.post("/user/<SessionID:sid>/ban")
+@auth.user_required
+def ban_user(sid):
+
+    user = User(session_id=sid)
+    req = request.json
+    rooms, global_ban = extract_rooms_or_global(req, admin=False)
+
+    timeout = req.get('timeout')
+    if timeout is not None and not isinstance(timeout, int) and not isinstance(timeout, float):
+        app.logger.warning("Invalid ban request: timeout must be numeric")
+        abort(http.BAD_REQUEST)
+
+    if timeout and global_ban:
+        app.logger.warning("Invalid ban request: global server bans do not support timeouts")
+        abort(http.BAD_REQUEST)
+
+    if rooms:
+        with db.transaction():
+            for room in rooms:
+                room.ban_user(to_ban=user, mod=g.user, timeout=timeout)
+    else:
+        user.ban(banned_by=g.user)
+
+    return {}
+
+
+@users.post("/user/<SessionID:sid>/unban")
+@auth.user_required
+def unban_user(sid):
+
+    user = User(session_id=sid)
+    rooms, global_ban = extract_rooms_or_global(request.json, admin=False)
+
+    if rooms:
+        with db.transaction():
+            for room in rooms:
+                room.unban_user(to_unban=user, mod=g.user)
+    else:
+        user.unban(unbanned_by=g.user)
+
+    return {}
